# etn-hw

./: CMakeLists.txt  Client.cpp  Client.h  Device.cpp  Device.h  LICENSE  NetworkTools.h  README.md  Server.cpp  Server.h  TempMonitor.cpp  TempMonitor.h  UptimeMonitor.cpp  UptimeMonitor.h  client_main.cpp  server_main.cpp
